# personalinfo

./: pyproject.toml  setup.cfg
.github/workflows/: auto-tag.yml  autotag.yml  ci.yml
extracted_info/: John Doe_info.xlsx
mypackage/: __init__.py  core.py
