[metadata]
name = personalinfo
# version will be dynamically provided by setuptools_scm
description = A sample package
author = prabaharan
author_email = prabaharanpython@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    # your dependencies here

[options.packages.find]
where = .

[tool:pytest]
testpaths = tests

[options.extras_require]
dev =
    pytest

[coverage:run]
branch = True

[coverage:report]
show_missing = True
