[metadata]
name = personalinfo
# version will be dynamically provided by setuptools_scm
description = A Python package for managing, exporting, and organizing personal information, including contact, family, education, professional, and more, with beautiful export options.
author = prabaharan
author_email = prabaharanpython@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    # your dependencies here

package_dir =
    =src

[options.package_data]
personalinfo = template.html

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[options.extras_require]
dev =
    pytest

[coverage:run]
branch = True

[coverage:report]
show_missing = True
